--------------------------------------------------------------------------
---------                  Ampache -- CHANGELOG                  ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.4-Alpha1
	- Added support for Internet Radio Stations
	- Updated LastFM submission formating to account for changes on 
		last.fm (Thx entropathy)
	- Fixed LastFM and increased timeout slightly in an attempt to 
		improve success rate
	- Disabled Search, Random Play & Localplay for Alpha release
	- Repalced CC Flash player with the previous GPL based flash player
		used patched 0.2.3 version created by Sylvain of 
		http://www.jamendo.com/fr/
	- Round the downsampled content-length
  	- Fixed cataloging so that Orphaned Albums are always the same year
  	- Added new preferences, created new Playlist Preference section
	- Fixed Find album art so it can look in the id3/wma art tags 
		correctly (Thx Karl Hungus)
  	- Updated SQL to latest version
  	- Moved Album art out of the album table into album_data 
  	- Changed Browsing Method and default playlist method
  	- Added Play links for Favorite Artists/Albums/Songs
  	- Fixed an issue with the random album selection that was causing
		a full table scan, which could lead to poor performance
		with large databases
  	- Start of Complete rewrite, config file format changed, requires
		manual re-creation of /config/ampache.cfg.php
	- Updated French and German translations
  	- Added min song count to Browse Artist, refercing min object count
		preference
  	- Fixed ratings so that it shows your rating if you've rated it
		otherwise it shows an average rating
  	- Fixed Democratic Play newest votes of same total count first
		(Order by vote time)
	- Fixed a problem where config re-gen wouldn't update the current
		version
	- Changed database to fix some user tracking issues